# Calc_GTFS_RT_Delay

./: .env  .gitignore  main.sh  pyproject.toml  readme.md
app/src/: calc_delay.py  calc_section_delay.py  check_stops_is_unique.py  extract_delay_utsunomiya_east.py  remove_outlier.py  test.py  update_gtfs.py  update_gtfs_rt.py
app/src/ipynb/: 駅間ルートとGTFSの紐付け.ipynb
app/src/py/: 00_GTFSの読み込み.py  00_GTFS（静的）の読み込み.py  01_遅延時間の算出.py  度数分布表作成.py
app/utils/: db.py
docker/: docker_compose.yml
